--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap')
+
+*
+    padding: 0
+    margin: 0
+    box-sizing: border-box
+    font-size: 16px
+    font-family: 'Lato', sans-serif
+    color: #333
+
+
+.d-flex
+    display: flex
+    flex-wrap: wrap
+
